Fri Feb 21 19:53:29 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* Makefile.am: Add zip filtering. Z library is now included in the
        release. By default, it is not installed but with
	--with-filters="zip", the Z library is included in garlic
	library and Z binding and filter are also included.
	

Fri Feb 21 17:35:34 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* s-gafizi.adb, s-gafizi.ads: Add zip filtering.

	* s-garhea.adb, s-garfil.adb, s-garfil.ads: Optimization of buffer
 	copies.

Thu Feb 20 14:45:29 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* s-garfil.ads, s-garfil.adb, s-gafino.ads, s-gafino.adb: Add
 	filtering. Only filter None has been included.
	
	* s-garsta.adb: Add filtering packages elaboration and call
 	System.Garlic.Filters.Initialize.

	* s-garhea.adb: Set filtering hooks in Send and Data_Arrived.
	This is a draft. Need to avoid copy optimization.
	
Thu Feb 13 19:35:41 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* s-garter.adb: Add a new procedure Local_Termination to provide
 	local termination facilities offered by Termination attribute
 	(newly defined in Gnatdist). Wait for Get_Active_Task_Count to be
 	1.

	* s-garopt.ads, s-garopt.adb: Move Permanent into Termination.
  	Permanent = True is equivalent to Termination = Deferred.  To
 	specify on the command line, use --terminate <local, global,
 	deferred>.

	* s-garhea.ads : Add type Termination_Type.
	
Thu Feb 13 09:02:25 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-garhea.ads: New function to check for termination.

	* s-garhea.adb: Ditto.

	* s-gartcp.adb: Protect block to prevent a race condition during
	  termination (see comment). This may or may not fix the problem,
	  anyway this is not blocking for the release.

	* Makefile.am: Don't compile s-ganobl.ad[bs] when not needed.

	* 2wgarcon.ads: New file containing precomputed Windows constants
	  (due to a bug in Cygnus' <sys/socket.h>, this file cannot be